--- a/.gitignore
+++ b/.gitignore
@@ -234,3 +234,5 @@ $RECYCLE.BIN/
 !.vscode/extensions.json
 
 # End of https://www.gitignore.io/api/node,macos,linux,windows,webstorm,sublimetext,visualstudiocode
+
+.serverless
